--- a/django-app/transcribe/templates/transcribe/transcription_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_detail.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 <div class="site-box p-4 bg-white col shadow">
-    <div id="transcription-detail-back-url" class="row mb-3 d-none">
+    <div class="row mb-3 d-lg-none">
         <div class="col">
             <a href="{% url 'transcribe:transcription-list' %}" class="font-6 path-link no-decoration">
                 <i class="fas fa-chevron-left mr-2"></i>
