--- a/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
+++ b/django-app/transcribe/templates/transcribe/transcription_list_and_detail.html
@@ -3,20 +3,6 @@
 
 {% block extra_css %}
     <style>
-        @media (max-width: 991px) {
-        {% if transcription_object is not None %}
-            #transcription-detail-back-url {
-                display: flex !important;
-            }
-            #transcription-list-box {
-                display: none !important;
-            }
-        {% endif %}
-            #transcription-empty-detail-msg {
-                display: none !important;
-            }
-        }
-
         #processing-transcription-hr {
             width: 300px;
             height: 3px;
@@ -31,9 +17,6 @@
             width: 350px;
             height: 5px;
             opacity: 100%;
-        }
-        #transcription-empty-detail-msg {
-            margin-top: 15rem !important;
         }
     </style>
 {% endblock %}
@@ -85,8 +68,7 @@
                 </div>
             {% else %}
                 {% include 'transcribe/transcription_list.html' %}
-                <div id="transcription-empty-detail-msg"
-                     class="col d-flex align-items-center mt-4 flex-column">
+                <div class="col d-lg-flex d-none align-items-center mt-4 flex-column" style="margin-top: 15rem !important;">
                     <p class="d-flex flex-column mb-0">
                         {% blocktranslate %}
                             <span class="font-7">Select</span>
